--- a/styles/common/config.css
+++ b/styles/common/config.css
@@ -46,6 +46,6 @@ img {
 
 @media (max-width: 456px) {
   h2 {
-    font-size: 18px;
+    font-size: 24px;
   }
 }
