--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -1,63 +1,70 @@
 .pricing {
-  padding: 25px 0;
-  background-color: #f5f5f5;
+	padding: 25px 0;
+	background-color: #f5f5f5;
 }
 
 .pricing__content-box {
-  margin-top: 60px;
-  min-height: 30rem;
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+	margin-top: 60px;
+	min-height: 30rem;
+	display: flex;
+	justify-content: space-between;
+	gap: 20px;
 }
 
 .pricing__list {
-  display: flex;
-  flex-basis: 370px;
-  flex-direction: column;
-  row-gap: 2px;
-  cursor: context-menu;
-  transition: transform 0.7s, box-shadow 0.7s;
+	display: flex;
+	flex-basis: 370px;
+	flex-direction: column;
+	row-gap: 2px;
+	cursor: context-menu;
+	transition: transform 0.7s, box-shadow 0.7s;
 }
 
 .pricing__list:hover {
-  transform: translateY(-1rem);
-  box-shadow: 0px 4px 10px rgba(51, 51, 51, 0.2);
+	transform: translateY(-1rem);
+	box-shadow: 0px 4px 10px rgba(51, 51, 51, 0.2);
 }
 
 .pricing__list-item {
-  font-size: 1rem;
-  text-transform: capitalize;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  color: #86878b;
-  padding: 0.85rem 0;
+	font-size: 1rem;
+	text-transform: capitalize;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #ffffff;
+	color: #86878b;
+	padding: 0.85rem 0;
 }
 
 .pricing__list-item--black {
-  background-color: #333333;
-  color: rgb(255, 255, 255);
+	background-color: #333333;
+	color: rgb(255, 255, 255);
 }
 
 .pricing__list-item--transparent-text {
-  color: rgba(255, 255, 255, 0.5);
+	color: rgba(255, 255, 255, 0.5);
 }
 
 .pricing__list-item--grow-x1 {
-  flex-grow: 1;
+	flex-grow: 1;
 }
 
 .pricing__list-item--grow-x2 {
-  flex-grow: 2;
-  font-weight: 700;
-  font-size: 2rem;
+	flex-grow: 2;
+	font-weight: 700;
+	font-size: 2rem;
 }
 
-@media (max-width: 768px) {
-  .pricing__content-box {
-    flex-direction: column;
-    padding: 0 10%;
-  }
+@media (max-width: 560px) {
+	.pricing__content-box {
+		flex-direction: column;
+		gap: 30px;
+		padding: 0 12%;
+	}
+}
+
+@media (max-width: 375px) {
+	.pricing__content-box {
+		padding: 0 5%;
+	}
 }
